--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IBudget</title>
     <link rel="stylesheet" href="ibudget.css">
+     <link rel="icon" type="image/x-icon" href='.img/logo.svg'>
 </head>
 <body>
     <div class="container tela-1-bg">
